fix menu overflow

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -334,7 +334,7 @@ a.btn {
 
     .text-bigger {
         font-size: 1.3rem;
-        line-height: 1.3em;
+        line-height: 1.6em;
     }
 
     .container {
